Makefile: 删除 xelatex 不认识的参数

--- a/latex_src/Makefile
+++ b/latex_src/Makefile
@@ -2,8 +2,7 @@
 all: awk.pdf
 
 awk.pdf: *.tex
-	latexmk -pdf -pdflatex="xelatex -interactive=nostopmode" \
-		-use-make awk.tex
+	latexmk -pdf -pdflatex="xelatex" -use-make awk.tex
 
 clean:
 	latexmk -CA
